cockroachdb/k8s/service-loadbalance.yaml
apiVersion: v1
kind: Service
metadata:
  name: cockroach-lb-service
  namespace: cockroach-operator-system
spec:
  selector:
    app.kubernetes.io/component: database
    app.kubernetes.io/instance: cockroachdb
    app.kubernetes.io/name: cockroachdb
    crdb: is-cool
  type: LoadBalancer
  ports:
  - name: sql
    protocol: TCP
    port: 26257
    targetPort: 26257
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
