cockroachdb/k8s/ingress-route-console.yaml


# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: tls-crdb-console
#   namespace: cockroach-operator-system
# spec:
#   dnsNames:
#     - console.crdb.env0.luojm.com
#   secretName: tls-crdb-console
#   issuerRef:
#     name: letsencrypt-production
#     kind: ClusterIssuer

---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: crdb-console 
  namespace: cockroach-operator-system
spec:
  entryPoints:
    - websecure
  tls: 
    secretName: tls-crdb-console
  routes:
    - match: Host(`console.crdb.env0.luojm.com`) 
      kind: Rule
      services:
      - name: cockroach-lb-service
        kind: Service
        namespace: cockroach-operator-system
        port: 8080
