cockroachdb/k8s/ingress-route.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: ingressroutetcp-crdb
  namespace: cockroach-operator-system
spec:
  entryPoints:
    # - websecure
    - web
  # tls:
  #   passthrough: true
  #   secretName: tls-crdb
  routes:
  # - match: HostSNI(`crdb.env0.luojm.com`)
  - match: HostSNI(`*`)
    services:
    - name: cockroach-lb-service
      port: 26257
