cockroachdb/k8s/ui.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: cockroach-ui
  namespace: cockroach-operator-system
spec:
  entryPoints:                  
    - websecure
  routes:                       
  - match: HostSNI(`console2.crdb.env0.luojm.com`)
    services:                   
    - name: cockroach-lb-service         
      port: 8080                                  
  tls:                          
    passthrough: true
